# backend_task

./: .gitignore  Dockerfile  Makefile  README.md  backend.py  docker-compose.yml  pyproject.toml
app/: .env.local  app.py  settings.py
app/api/: router.py
app/api/errors/: api_error.py  handlers.py
app/api/models/: base.py
app/api/operators/: handlers.py  schemas.py
app/api/requests/: handlers.py  schemas.py
app/api/sources/: handlers.py  schemas.py
app/dependencies/: container.py
app/domain/: models.py
app/infrastructure/: db.py
app/persistent/db_schemas/: tables.py
app/repositories/: lead.py  operator.py  operator_weight.py  request.py  source.py  uow.py
app/use_cases/: close_request.py  create_operator.py  create_request.py  create_source.py  set_operator_weight.py  update_operator.py
app/utils/: model.py
app/views/: get_leads.py  get_operators.py  get_requests.py  get_source_detail.py  get_sources.py
migrations/: changelog.xml  liquibase.properties
migrations/sql/: init.sql
